assets/less/visage.less
/* ... */
.img-box a {
  color: #fff;
}

//.img-box:hover:after{
//  opacity: 1;
//}
.img-box:hover ul {
  opacity: 1;
}

.img-box ul a {
  -webkit-transition: all 0.3s ease-in-out 0s;
  -moz-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.img-box a:hover li {
  border-color: #fff;
  color: #88C425;
}

a {
  color: #88C425;
}

a:hover {
  text-decoration: none;
  color: #519548;
}

i.red {
  color: #BC0213;
}

.previous-exp {
  color: #414141;
}

.img-box img {
  max-height: 197px;
  display: inline;
}

.profile p {
  font-size: .9em;
}

#company {
  padding: 60px 0;
  color: #fff;
  background: url('../img/visage/team-header.jpg') no-repeat center;
  -webkit-background-size: cover;
  background-size: cover;
  .section-header {
    margin-bottom: 60px;
  }

  p {
    font-size: 1.2em;
  }

  h1{
    font-size: 2em;
  }
  h2{
    font-size: 1.3em;
  }
  h1,h2{
    font-weight: 300;
    text-shadow: 0 0 5px rgba(0,0,0,.75);
  }
}

#our-mission{
  background: #0fc48b;
  color: #fff;

  h3{
    margin-bottom: 40px;
  }
}

.step {
  border-radius: 50%;
  display: inline-block;
  width: 24px;
  height: 24px;
  background-color: #fff;
  color: #0ec48b;
  text-align: center;
  line-height: 24px;
  font-size: 18px;
  margin-right: 6px;
  & + .highlight {
    font-size: 27px;
  }
}

#how.features-list-section .step{
  color: #fdc006;
}

.heading {
  position: relative;
}

#visage #how {
  .section-content {
    .section-header {
      margin-bottom: 50px;
    }

    article i.fa {
      color: #ffc107;
      font-size: 45px;
    }
  }
  .heading .highlight {
    color: #fff;
  }
}

#product {
  .section-header{
    margin-bottom: 40px;
  }
}

.profile {
  position: relative;
}

.footer .footer-content > div:last-child .heading {
  text-align: left;
}

.social-icon a{
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: #fff;
  font-size: 17px;
  line-height: 40px;
  position: absolute;
  top: 178px;
  right: 50%;
  -webkit-transform: translateX(50%);
  transform: translateX(50%);
  transition: all ease 200ms;
  i.fa{
    color: #1d87bd;
  }
  &:hover{
    -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.6);
    -moz-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.6);
    box-shadow: 0 1px 1px 0 rgba(0,0,0,0.6);
    i {
      color: #196c96;
    }
  }
}

#pricing-features h5 {
  font-weight: 500;
  color: #fff;
  line-height: 20px;
}
#pricing-features h5 + h5{
  color: #ffc107;
}
#pricing-features h5 + h5 span{
  color: #fff;
}

#visage #numbers h5 {
  margin: 0;
  line-height: 50px;
}

.team-quotes{
  position: relative;
  height: 100px;
}

.team-quote {
  position: absolute;
  left: 0;
  right: 0;

}

#diversity-header{
  background: url('../img/visage/diversity-header.jpg') no-repeat center;
  -webkit-background-size:  cover;
  background-size: cover;

  .section-header{
    text-shadow: 0 0 5px rgba(0,0,0,.75);
    color: #fff;
  }

  h3{
     font-weight: 500;
  }
}

#diversity,
#diversity-anon{
  h4{
    color: #23a779;
  }
}

#visage #numbers{
  .section-recruitment h5{
     margin-top:0px;
  }
}

#visage.waitlist-thankyou{
  padding-top: 0;
}

#visage.waitlist{
  #hero h5{
    text-shadow: 0 0 5px rgba(0, 0, 0, 0.75);
  }
}

#wufooFormr19q4npc0floewu {
  height: 80px;
}
.cl-title{
  color: #606060;
}

#hero form{
  position: relative;
  left:10px;
  //margin-top: -20px;
  //width: 80%;
  input{
    //width:120%;
    //height:25px;
    font-size:  14px;
    padding-left: 5px;
    padding: 0 10px;
    height: 40px;
  }
  legend {
    //font-size:15px;
    color: #606060;
    text-align: center;
    //padding-left: 60px;
    font-size: 18px;
    margin-bottom: 15px;
    font-weight: 700;
    font-family: "Lato", "Helvetica Neue", Arial, Helvetica, sans-serif;
  }
}
#hero button {
  background-color: #ffc107;
  color:white;
  //height:25px;
  //font-size: 10px;
  text-align: center;
  padding-top:8px;
  border-radius: 0;
  margin-left: 30px;
}

#hero #request {
  //margin-left: -2px;
}
@media screen and (min-width: 768px){
  #hero #signUp {
    margin-left: 5px;
  }
}

.form-background.bg-green {
  z-index: 0;
  background-color: rgba(132, 197, 187, 0.49);
  position: absolute;
  height: 110%;
  left: 0;
  right:  0;
  top: -10px;

  @media screen and (min-width: 768px){
    transform: scaleY(2);
  }
  @media screen and (max-width: 767px){
    right: 0;
  }

  &+.animated{
    position: relative;
  }

}

#form-demo{
  .form-group{
    //text-align: center;
  }
  .col-sm-8.col-md-6, .col-md-4{
    float: none;
    display: inline-block;
  }
  button{
    margin-left: 0;
  }
}

.col-sm-6.animated.vcenteranimated .form-group{
  margin-top: 60px;
  @media screen and (min-width: 768px) {
    padding-left: 30px;
  }
  a{
    background-color: #ffc107;
    color: #fff;
  }
}

.heading-block:not(.centered-block) {
  padding-top: 0;
}

#visage #hero .signup-side h2{
  font-size: 2em;
  text-align: center;
  font-weight: 500;
  margin-top: 0;
  margin-bottom: 40px;
}

.features-list-section{
  h5 .highlight{
    font-size: 1em;
  }

  h6{
    color: #fff;
    font-weight: 600;
  }
}

.circle-display{
  background-color: #fff;
  width: 80px;
  height: 80px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  img{
    max-width: 60px;
  }
  &.circle-display-last img{
    max-width: 50px;
  }
}

